[package]
name = "machina"
version = "0.4.0"
authors = ["ion <ionix@protonmail.com>"]
repository = "https://github.com/ioncodes/machina"
license = "MIT"
description = "Manage and execute assembly at runtime."

[dependencies]
libc = "*"
aligned_alloc = "*"
region = "*"

[dev-dependencies]
sam = "0.2.0"
