[package]
name = "machina"
version = "0.6.1"
authors = ["ion <ionix@protonmail.com>"]
repository = "https://github.com/ioncodes/machina"
license = "MIT"
description = "Manage and execute assembly at runtime."

[dependencies]
libc = "0.2"
aligned_alloc = "0.1.3"
region = "0.1.1"

[dev-dependencies]
sam = "0.2.0"

[features]
default = []
optimize = []
